--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "5",
     "react-scripts": "5.0.0",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
