--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-router-dom": "5",
     "react-scripts": "5.0.0",
     "redux-saga": "^1.1.3",
+    "sass": "^1.49.0",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
