--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "5",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "redux-saga": "^1.1.3",
     "sass": "^1.49.0",
     "typescript": "^4.5.4",
