--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.25.0",
+    "classnames": "^2.3.1",
     "final-form": "^4.20.6",
     "json-server": "^0.17.0",
     "react": "^17.0.2",
