--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-router-dom": "5",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.49.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3",
